209

- Add @ConfigHidden annotation to prevent listing config values.
- Add http proxy support in http client
- Add IP_ENCODED_AS_HOSTNAME to internal address source. This ensures
  compatibility with SNI when using automatic HTTPS configuration.
- Add new rolling log file implementation. The legacy implementation can be used
  by setting the "log.legacy-implementation.enabled" config property.

208

- Add support for basic JSON logging.
- Only bind HTTPS config for HTTP server when HTTPS is enabled.
- Make strict config default for Bootstrap. Non-strict is deprecated.
- Require explicit Guice bindings for Bootstrap.
- Require exact Guice binding annotations for Bootstrap.

207

- Java 11 is now required.
- Fix spurious reload of HTTP server SSL context after start.
- Fix support for SNI for single label domains and IP addresses.
- Fix JAXB error for OPTIONS requests to JAX-RS resources.
- Disable HTTP server admin port by default.
- Remove Kerberos support from HTTP client.
- Add automatic HTTPS configuration.
- Deprecate ConfigurationModule.installModules.
- Deprecate ConditionalModule.installModuleIf and introduce
  ConditionalModule.conditionalModule.
- Remove support for joda-time from event module.
- Migrate to ListenableFuture<Void> for future signaling.
- Add Error Prone format string annotations to Logger.

206

- Fix SNI handling for HTTP server.
- Include server URL for HTTP client IOException.
- Log full stack trace for discovery client errors.
- Allow trailing slash for discovery client URI.
- Only reload HTTP server SSL context when files change.

205

- Add form data body builder for HTTP client.
- Add JSON Web Key Sets (JWKS) decoder and service.
- Update to Jetty 9.4.40.v20210413.
- Remove TestNG dependency from ConfigAssertions and testing module.
- Remove @Beta annotation from everything.

204

- Fix running ConfigAssertions on Java 16.
- Update to Jetty 9.4.39.v20210325.
- Allow using dashes in enum config values.