@@ -1,9 +1,0 @@
-[req]
-default_bits = 2048
-prompt = no
-default_md = sha256
-distinguished_name = dn
-
-[dn]
-CN = single
-
