@@ -6,11 +6,11 @@ x509_extensions = v3_req
 distinguished_name = dn
 
 [dn]
-CN = some-thing
+CN = single13
 
 [v3_req]
 subjectAltName = @alt_names
 
 [alt_names]
-IP.1   = 127.0.0.1
-
+DNS.1 = single1
+DNS.2 = single3
